--- a/config/params.yaml
+++ b/config/params.yaml
@@ -73,6 +73,7 @@ estimators:
       alpha: 0.9
       l1_ratio: 0.4
   SVM:
+    name: SVC()
     params:
       random_state: 45
       C: 1.0
@@ -80,11 +81,17 @@ estimators:
 
 
 
-saved_model_dir: saved_models
+saved_model_dir: saved_models/
 best_model_name: best_model
-is_best_model: True
-best_model: best_model.joblib
+model_version: v1
+model_format: .joblib
 
+production:
+  model_path: saved_models/best_model_v1.joblib
+
+
+test_prediction:
+  - json_data: tests/test.json
 
 reports:
   params: params.json
