--- a/config/params.yaml
+++ b/config/params.yaml
@@ -3,6 +3,7 @@ base_model_params:
   random_state: 43
   target: is_bad
 
+
 data_source:
   datasets_link: https://s3.amazonaws.com/datarobot_public_datasets/DR_Demo_Lending_Club.csv
   raw_source: raw_data/raw_data.csv
@@ -17,13 +18,19 @@ split_data:
   y_test_path: processed_data/y_test.csv
   test_size: 0.2
 
+  reference_xtrain: processed_data/reference_x_train.csv
+  reference_ytrain: processed_data/referecne_y_train.csv
 
-split_data_processed:
-  X_train_path: x_train.csv
-  y_train_path: y_train.csv
-  X_test_path: x_test.csv
-  y_test_path: y_test.csv
-  test_size: 0.2
+  reference_xtest: processed_data/reference_x_test.csv
+  reference_ytest: processed_data/referecne_y_test.csv
+
+
+# split_data_processed:
+#   X_train_path: x_train.csv
+#   y_train_path: y_train.csv
+#   X_test_path: x_test.csv
+#   y_test_path: y_test.csv
+#   test_size: 0.2
 
 categorical_vars:
   emp_title: emp_title
@@ -86,6 +93,8 @@ best_model_name: best_model
 model_version: v1
 model_format: .joblib
 
+
+
 production:
   model_path: saved_models/best_model_v1.joblib
 
@@ -97,6 +106,8 @@ reports:
   params: params.json
   scores: scores.json
   prediction: prediction.json
+  model_data_and_target_drift_dashboard: reports/model_data_and_target_drift_dashboard.html
+  model_performance_drift_dashboard: reports/model_performance_drift_dashboard.html
 
 original_features:
   - earliest_cr_line
