--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -14,10 +14,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-    - name: configure
-      run: ./configure
-      
     - name: Install dependencies
+      run: make requirements
+      
+    - name: pre nuild test
       run: make pre_build
       
 #     - name: Run check
