remove prettyjson precommit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
     -   id: check-merge-conflict
     -   id: file-contents-sorter
     -   id: name-tests-test
-    -   id: pretty-format-json
+    # -   id: pretty-format-json
     -   id: requirements-txt-fixer
 
 -   repo: https://github.com/PyCQA/flake8
