--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,8 @@ jobs:
     - name: Install dependencies
       run: make requirements
 
-    - name: Run clean
-      run: make clean
+    - name: Run pre_build
+      run: make pre_build
 
-#     - name: Run distcheck
-#       run: make distcheck
+    # - name: Run distcheck
+    #   run: make distcheck
